fixed overflow

--- a/web/src/styles/general.scss
+++ b/web/src/styles/general.scss
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     background: #0d0d0d;
-
+    overflow-x: hidden;
     color: #f1f1f1;
 }
 
